--- a/spring/week1/memo/src/main/resources/application.properties
+++ b/spring/week1/memo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=memo
+
+spring.config.import=optional:.env[.properties]
+
+spring.datasource.url=jdbc:mysql://localhost:3306/memo
+spring.datasource.username=${LOCAL_DB_USERNAME}
+spring.datasource.password=${LOCAL_DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
