--- a/spring/week4/homework/com.sparta.msa_exam.gateway/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.gateway/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     web-application-type: reactive
   application:
     name: gateway-service
+  config:
+    import: optional:.env[.properties]
   cloud:
     gateway:
       server:
