--- a/spring/week4/homework/com.sparta.msa_exam.product/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.product/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
+  config:
+    import: optional:.env[.properties]
   jpa:
     hibernate:
       ddl-auto: update
