--- a/spring/week4/homework/com.sparta.msa_exam.order/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.order/src/main/resources/application.yml
@@ -22,3 +22,7 @@ eureka:
       defaultZone: http://localhost:19090/eureka/
 server:
   port: 19092
+  error:
+    include-message: always
+    include-binding-errors: always
+    include-exception: true
