--- a/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
@@ -3,6 +3,20 @@ spring:
     name: auth-service
   config:
     import: optional:.env[.properties]
+  datasource:
+    url: jdbc:mysql://localhost:3306/msa/product
+    username: ${LOCAL_DB_USERNAME}
+    password: ${LOCAL_DB_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+
 eureka:
   client:
     service-url:
