fix(auth): set port

--- a/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
@@ -22,7 +22,10 @@ eureka:
     service-url:
       defaultZone: http://localhost:19090/eureka/
 
+
 service:
   jwt:
     access-expiration: ${JWT_EXPIRATION}
     secret-key: ${JWT_KEY}
+server:
+  port: 19095
