--- a/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.auth/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   config:
     import: optional:.env[.properties]
   datasource:
-    url: jdbc:mysql://localhost:3306/msa/product
+    url: jdbc:mysql://localhost:3306/msa/user
     username: ${LOCAL_DB_USERNAME}
     password: ${LOCAL_DB_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -21,7 +21,6 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
-
 
 service:
   jwt:
