--- a/spring/week4/homework/com.sparta.msa_exam.order/build.gradle
+++ b/spring/week4/homework/com.sparta.msa_exam.order/build.gradle
@@ -39,6 +39,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.springframework.boot:spring-boot-starter-cache'
+	implementation 'com.github.ben-manes.caffeine:caffeine'
 }
 
 dependencyManagement {
