--- a/spring/week4/homework/com.sparta.msa_exam.order/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.order/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=60s
 eureka:
   client:
     service-url:
