--- a/spring/week4/homework/com.sparta.msa_exam.product/src/main/resources/application.yml
+++ b/spring/week4/homework/com.sparta.msa_exam.product/src/main/resources/application.yml
@@ -16,10 +16,11 @@ spring:
         show_sql: true
         format_sql: true
         use_sql_comments: true
-
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:19090/eureka/
   instance:
     instance-id: ${spring.application.name}:${server.port}
+server:
+  port: 19093
